/*
 * Copyright 2017 The Kythe Authors. All rights reserved.
 *
 * Licensed under the Apache License, Version 2.0 (the "License");
 * you may not use this file except in compliance with the License.
 * You may obtain a copy of the License at
 *
 *   http://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an "AS IS" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
 */

syntax = "proto3";

package kythe.proto;

option go_package = "kythe.io/kythe/proto/go_go_proto";
option java_package = "com.google.devtools.kythe.proto";

// Go-specific details used in a CompilationUnit.
// Its type is "kythe.io/proto/kythe.proto.GoDetails".
message GoDetails {
  string goos = 1;      // the GOOS value, e.g., "linux"
  string goarch = 2;    // the GOARCH value, e.g., "amd64"
  string goroot = 3;    // root directory of the Go installation
  string gopath = 4;    // root directory of the user's Go data
  string compiler = 5;  // the compiler used, e.g., "gc", "gccgo"

  // Build tags that are effective for this compilation.
  // This implicitly includes GOOS and GOARCH if provided.
  repeated string build_tags = 6;

  // Whether cgo is enabled for this compilation.
  bool cgo_enabled = 7;
}

// GoPackageInfo provides details about a Go package.  This may be in relation
// to a CompilationUnit as a whole or specific required input.
message GoPackageInfo {
  string import_path = 1;
}
